# MeowOS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  grub.cfg  linker.ld  readme.md
include/meow/: elf64.h  enter_user_mode.h  fat.h  gdt.h  idt.h  interrupts.h  io.h  isofs.h  isr.h  longmode.h  paging.h  panic.h  pic.h  runtime.h  scheduler.h  storage.h  string.h  syscall.h  vfs.h  vga.h
include/meow/userland/: init.h
scripts/: count_lines.sh  mkramfs.sh  setup.sh
src/arch/x86_64/: enter_user_mode.c  enter_user_mode.s  longmode.c  longmode_jump.h  longmode_jump.s  longmode_tables.s  longmode_trampoline.s  syscall_entry.s
src/bootloader/: boot.s
src/drivers/storage/: storage.c
src/fs/: fat.c  isofs.c  vfs.c
src/graphics/: vga.c
src/io/: io.c
src/kernel/: kernel.c  panic.c  scheduler.c
src/kernel/arch/: compat64.c
src/kernel/cpu/: gdt.c
src/kernel/interrupts/: idt.c  interrupts.s  isr.c  pic.c
src/kernel/mem/: paging.c
src/kernel/syscall/: syscall.c
src/libc/: string.c
src/userland/: init.c  runtime.c  shell.c
tests/: test_one.c
tools/: mkinitramfs.c
tools/meowbox/: meowbox.c
